<resources>
    <string name="app_name">FoodiePal</string>
    <string name="app_name2">🥗 FoodiePal</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="time_to_cook">\nTime to Cook</string>
    <string name="add_recipe_name_field">Name of new recipe</string>
    <string name="empty">…</string>
    <string name="creator">Vanara Leng</string>
    <string name="menu_recipe">Recipe</string>
    <string name="menu_meal_planner">Meal Planner</string>
    <string name="menu_blog">Blog</string>
    <string name="contact_message_call">For more information</string>
    <string name="contact_call_us">Call Us</string>
    <string name="contact_message_email">Or send email to us via:</string>
    <string name="contact_send_us_email">Send Us Email</string>
    <string name="block_comments">Comments</string>
    <string name="blog_add_comment">Add comment...</string>
    <string name="plan_breakfast">🍳 Breakfast</string>
    <string name="plan_lunch">🍜 Lunch</string>
    <string name="plan_dinner">🥗 Dinner</string>
    <string name="recipe_cooking_time">Cooking Time</string>
    <string name="login_title">Log in FoodiePal</string>
    <string name="login_log_in">Log In</string>
    <string name="login_register">Or Register</string>
    <string name="error_user_not_found">"User not found "</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_user_existed">User is already exist! Please log in instead</string>
    <string name="error_incorrect_input">Incorrect Input</string>
    <string name="login_user_signed_up_successfully">User signed up successfully</string>
    <string name="error_phone_app_available">There is no phone app available</string>
    <string name="error_no_mail_app">There is no e-mail app available</string>
    <string name="contact_default_subject">FoodiePal: Question</string>
    <string name="plan_plan_button">Plan</string>
    <string name="cancel">Cancel</string>
    <string name="plan_added_success">Plan is added successfully</string>
    <string name="plan_add_title">Add more recipe</string>
    <string name="recipe_added_success">Recipe added successfully</string>
    <string name="recipe_add_title">Add more recipe</string>
    <string name="undo">Undo</string>
    <string name="recipe_rating_updated">Rating updated!</string>
    <string name="blog_add_comment_title">Add Comment</string>
    <string name="blog_comment_hint">Write your comment</string>
    <string name="blog_add_comment_button">Add Comment</string>
    <string name="anonymous">Anonymous</string>
    <string name="blog_compose_blog_title">Compose your blog</string>
    <string name="blog_title_hint">Write title here</string>
    <string name="blog_body_hint">Write description here</string>
    <string name="blog_post">Post</string>
    <string name="blog_blog_posted_success">Your blog is posted.</string>
    <string name="add">Add</string>
    <string name="about_add_new_field">Add new field</string>
    <string name="about_field_name_hint">Field name</string>
    <string name="about_value_hint">Description</string>
    <string name="about_add_button">Add field</string>
    <string name="about_add_success">Information has been added.</string>
</resources>